--- a/index.html
+++ b/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
+
     <title> NBA Hangtime </title>
-      <h1><strong> Welcome to NBA Hangtime ! </strong></h1>
 
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300"rel="stylesheet">
+    <link rel="stylesheet"type="text/css"href="assets/css/reset.css">
+    <link rel="stylesheet"type="text/css"href="assets/css/bootstrap.css">
+    <link rel="stylesheet"type="text/css"href="assets/css/style.css">
 
+    <div class= "jumbotron">
+      <div class="container">
+        <img class= "col-md-12" src= assets/images/nbaht.png>
+        </div>
+      </div>
+    </div>
+
+</head>
+    <div class= "container">
+      <div class="row">
+        <div class = "col-md-1">
+      </div>
+    </div>
+  </div>
+
+    <div id="heading" class="font-effect-3d">
+
+      <h1>NBA Hangtime</h1>
+
+  </div>
+  <div class="font-effect-neon" style="text-align:center"></div>
+
+
+<body>
+      <input type="button" name="button" class="btn btn-primary btn-sm" value="New Game" onclick="1">
+  <div class="alphabet" style="width:800px;">
+          <br>
+          <div class="first-row">
+              <button type="button" class="btn btn-primary btn-lg">Q</button>
+              <button type="button" class="btn btn-primary btn-lg">W</button>
+              <button type="button" class="btn btn-primary btn-lg">E</button>
+              <button type="button" class="btn btn-primary btn-lg">R</button>
+              <button type="button" class="btn btn-primary btn-lg">T</button>
+              <button type="button" class="btn btn-primary btn-lg">Y</button>
+              <button type="button" class="btn btn-primary btn-lg">U</button>
+              <button type="button" class="btn btn-primary btn-lg">I</button>
+              <button type="button" class="btn btn-primary btn-lg">O</button>
+              <button type="button" class="btn btn-primary btn-lg">P</button>
+          </div>
+          <div class="second-row" style="padding-left:40px;">
+              <button type="button" class="btn btn-primary btn-lg">A</button>
+              <button type="button" class="btn btn-primary btn-lg">S</button>
+              <button type="button" class="btn btn-primary btn-lg">D</button>
+              <button type="button" class="btn btn-primary btn-lg">F</button>
+              <button type="button" class="btn btn-primary btn-lg">G</button>
+              <button type="button" class="btn btn-primary btn-lg">H</button>
+              <button type="button" class="btn btn-primary btn-lg">J</button>
+              <button type="button" class="btn btn-primary btn-lg">K</button>
+              <button type="button" class="btn btn-primary btn-lg">L</button>
+          </div>
+          <div class="third-row" style="padding-left:100px;">
+              <button type="button" class="btn btn-primary btn-lg">Z</button>
+              <button type="button" class="btn btn-primary btn-lg">X</button>
+              <button type="button" class="btn btn-primary btn-lg">C</button>
+              <button type="button" class="btn btn-primary btn-lg">V</button>
+              <button type="button" class="btn btn-primary btn-lg">B</button>
+              <button type="button" class="btn btn-primary btn-lg">N</button>
+              <button type="button" class="btn btn-primary btn-lg">M</button>
+          </div>
+          <script type="assets/javascript/games.js">
+
+          </script>
+      </div>
   </body>
+
 </html>
